# NetworkProgrammingInC

./: CMakeLists.txt
lib/: common.h  log.c  log.h  read.c
source/: client_send.c  make_socket.c  server_read.c  udpclient.c  udpserver.c
